--- a/css/tasty.css
+++ b/css/tasty.css
@@ -202,7 +202,7 @@ header .container {
 /* ______________________________________Buttons_______________________________________ */
 .contact-buttons{
 	display: grid;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr;
 	column-gap: 1rem;
 	margin-top: 1rem;
 	width: 100%;
@@ -283,7 +283,7 @@ header .container {
 		row-gap: 1rem;
 	}
 	.btn{
-		grid-column: span 2;
+		grid-column: span 3;
 	}
 	.contact-heading h1{
 		font-size: 1.3rem;
