--- a/css/tasty.css
+++ b/css/tasty.css
@@ -302,31 +302,35 @@ header .container {
 }
 @media screen and (max-width: 375px){
 	html{
-		font-size: 12px;
+		font-size: 11px;
 	}
 	.contact .container {
 		display: grid;
 		grid-template-columns: 1fr;
-		grid-template-rows: 1fr 1fr;
+		grid-template-rows: 50% 50%;
 		grid-template-areas: 
 		"lf"
 		"rig";
 	}
 	.contact .container .left {
+		width: 100%;
+		height: 100%;
 		grid-area: lf;
 	}
 	.contact .container .right {
+		height: 100%;
+		width: 100%;
 		grid-area: rig;
 		display: flex;
-
+		padding-top: 0;
 		justify-content: center;
+		inline-size: center;
 	}
 	.right .form-wrapper {
-		width: 100%;
-		height: 100%;
+		min-width: 325px;
 	}
 	header{
-		transform: translate3d(0,calc(var(--scrollTop)*1.5), 0); 
+		transform: translate3d(0,calc(var(--scrollTop)*1.48), 0); 
 	}
 	.container-left{
 		padding: 2.5rem;
@@ -341,5 +345,17 @@ header .container {
 		color: var(--light-text-color);
 		line-height: 1.1;
 		font-size: 1.3rem;
+	}
+	.contact-buttons{
+		display: grid;
+		margin-bottom: 0.8rem;
+		grid-column: 1/5;
+		
+	}
+	.contact-form {
+		display: grid;
+		row-gap: 0.4rem;
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: 1fr 1fr;
 	}
 }
